fix padding on mobile

--- a/assets/src/styles/mtheme-ronald/pagination.less
+++ b/assets/src/styles/mtheme-ronald/pagination.less
@@ -12,4 +12,8 @@
   .older-posts {
     text-align: right;
   }
+  
+  @media only screen and (max-width: 500px) {
+    padding: 0;
+  }
 }
