--- a/assets/src/styles/mtheme-ronald/post-list-item.less
+++ b/assets/src/styles/mtheme-ronald/post-list-item.less
@@ -7,7 +7,12 @@ ul.post-list {
   li {
     display: list-item;
   }
+  
+  @media only screen and (max-width: 500px) {
+    padding: 0;
+  }
 }
+
 
 .list-item {
   &:last-child .post-list-item{
